--- a/public/404.html
+++ b/public/404.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="anarchyrucks.github.iocss/axis.css">
   <link rel="stylesheet" href="anarchyrucks.github.iocss/syntax.css">
 
-  <link rel="shortcut icon" type="image/jpeg" href="">
+  <link rel="shortcut icon" type="image/jpeg" href="https://avatars0.githubusercontent.com/u/8762472?s=290">
   <link rel="apple-touch-icon" type="image/jpeg" href="https://avatars0.githubusercontent.com/u/8762472?s=290">
 
   
